force-app/main/default/objects/Quickbooks_Mapping__mdt/Quickbooks_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Quickbooks Mapping</label>
    <pluralLabel>Quickbooks Mapping</pluralLabel>
</CustomObject>