force-app/main/default/objects/Quickbooks_Mapping__mdt/fields/JSON_Node__c.field-meta.xml
<CustomField>
    <fullName>JSON_Node__c</fullName>
    <label>JSON Node</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>