force-app/main/default/objects/Quickbooks_Mapping__mdt/fields/Static_Value__c.field-meta.xml
<CustomField>
    <fullName>Static_Value__c</fullName>
    <label>Static Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>