force-app/main/default/objects/Quickbooks_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>JSON_Node__c</columns>
    <columns>Field__c</columns>
    <columns>Static_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>